Name:                imgurder
Version:             1.0
Description:         Uploader for Imgur
License:             BSD3
License-file:        LICENSE
Author:              Dan Colish
Maintainer:          dan@unencrypted.org
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable imgurder
  Main-is:           imgurder.hs
  Build-Depends:     base >= 3 && < 5, hxt >= 8.3.2, hslua >= 0.2,
                     curl >= 1.3.5, directory >= 1.0.0.3, haskell98 >= 1

